added feature to make sure pages dont break after reaching final page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             
         </div>
 
-        <div id="pagination">
+        <div>
           <button id="prevPageBtn" type="button" class="btn btn-danger">Previous</button>
           <button id="nextPageBtn" type="button" class="btn btn-success">Next</button>
       </div>
